Update README with badges and new layout

--- a/projects/personal-portfolio/index.html
+++ b/projects/personal-portfolio/index.html
@@ -1,1 +1,70 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wenchi | Full Stack Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Oliver Silawo</h1>
+    <p>Full Stack Developer | PHP, MySQL | HTML, CSS, JavaScript, React</p>
+    <a href="#projects" class="btn">View Projects</a>
+  </header>
+
+  <nav class="navbar">
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I am a full stack developer building modern, scalable web applications. I specialize in backend systems, APIs, and responsive frontends.</p>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>HTML5, CSS3, JavaScript</li>
+        <li>PHP, MySQL</li>
+        <li>React.js, Node.js</li>
+        <li>Git & GitHub</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Client Dashboard</h3>
+        <p>CRUD system with login authentication using PHP and MySQL.</p>
+        <a href="projects/client-dashboard/index.php" target="_blank">Live Demo</a>
+      </div>
+      <div class="project">
+        <h3>Crypto Dashboard</h3>
+        <p>React app fetching real-time crypto prices via API.</p>
+        <a href="projects/crypto-dashboard/index.html" target="_blank">Live Demo</a>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:oliversilawo@gmail.com">oliversilawo@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/Wenchi12" target="_blank">github.com/Wenchi12</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 Oliver Silawo. All rights reserved.</p>
+  </footer>
+
+  <script src="js/main.js"></script>
+  <script src="js/smooth-scroll.js"></script>
+</body>
+</html>
